@@ -1,3 +1,4 @@
+* Call autocompletion when setting record value
 * Limit readonly state for xxx2Many
 * Simplify login with single database 
 * Show records names in relate window title
